add CORS configuration to allow specific origins in SecurityConfig